--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "react-loadable": "^4.0.5",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
